--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 shp/CCLNEL[[:space:]]Intersection.dbf filter=lfs diff=lfs merge=lfs -text
 shp/CCLNEL[[:space:]]Intersection.dbf filter=lfs diff=lfs merge=lfs -text
+shp/CCLNEL[[:space:]]Intersection.dbf filter=lfs diff=lfs merge=lfs -text
